added check user authenticate
